platter-compiler-sveltejs/static/python/tests/syntax_programs/invalid_tests/test_script_12.platter
start() {
    repeat((x+5) * "abc" == 5){ }
}